--- a/About us.html
+++ b/About us.html
@@ -9,80 +9,103 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="bg-light">
-    <nav class="container-fluid d-flex navbar bg-light">
-        <a href="index.html"><img class="img-fluid" src="./image/kodecamp-logo 1.png" alt="logo"></a>
-        <ul class="list-unstyled d-flex">
-            <li><a class="text-decoration-none text-dark px-5" href="About us.html">About us</a></li>
-            <li><a class="text-decoration-none text-dark px-5" href="services.html">Services</a></li>
-            <li><a class="text-decoration-none text-dark px-5" href="contact.html">Contact us</a></li>
-        </ul>
-        <button class="btn btn-outline-dark btn-lg bg-light">Sign in</button>
-    </nav>
-    <section class="container bg-light m-auto w-50">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light w-auto p-3">
+        <div class="container-fluid">
+          <a  class="navbar-brand" href="index.html"><img class="img-fluid" src="./image/kodecamp-logo 1.png" alt="logo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="services.html">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="About us.html">About us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+              </li>
+           
+            </ul>
+            <form class="d-flex">
+              <button class="btn btn-outline-success" type="submit">Sign In</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    <section class="container-fluid bg-light m-auto">
         <h2 class="text-center">About us</h2>
-        <p class="text-center text-primary fs-3 my-5">Our talented tutor team dissects every topic the best way possible to give you a firm understanding of your choice track</p>
+        <p class="text-center text-primary fs-4 w-md-75 my-2">Our talented tutor team dissects every topic the best way possible to give you a firm understanding of your choice track</p>
     </section>
 
-    <section class="h-25 w-100">
-        <div class="row  py-5 px-5">
-            <div class="col-12 d-flex">
-                <div class="col-4">
+    <section class="container-fluid vh-100 vw-md-100">
+        <div class="row">
+            <div class="col-12 d-flex flex-sm-column flex-md-row flex-column vh-100">
+                <div class="col-4 col-md-4 m-auto pb-2 px-md-2">
                     <img class="img-fluid" src="./image/bstrap imagee.jpg" alt="front-end">
                 </div>
-                <div class="col-4 px-5">
+                <div class="col-4 col-md-4 m-auto p-xxl-5 pb-2">
                     <img class="img-fluid" src="./image/task 6.png" alt="UI/UX">
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-md-4 m-auto pb-2 px-md-2">
                     <img class="img-fluid" src="./image/bstrap imagee.jpg" alt="back-end">
                 </div>
             </div>
         </div>
     </section>
-    <section class="container py-5">
-        <h2>Learning brought to your doorstep</h2>
-        <p>we make learning comfortable. every class can be attended from the comfort of your home.
-        </p>
-
-        <p>what if i miss a class?
-            no worries, you can always go back to a missed class.
-        </p>
-
+    <section class="container-fluid">
+        <div>
+            <h2 class="text-center">Learning brought to your doorstep</h2>
+            <p class="text-center">we make learning comfortable. every class can be attended from the comfort of your home.
+            </p>
+            <p class="text-center">what if i miss a class?
+                no worries, you can always go back to a missed class.
+            </p>
+            <div class="row">
+                <div class="col-12 d-flex flex-column">
+                    <div class="col-4 m-auto">
+                        <h2 class="text-success text-center">24/7 mentorship</h2>
+                    </div>
+                    <div class="col-4 m-auto">
+                        <h2 class="text-success text-center">Games</h2>
+                    </div>
+                    <div class="col-4 m-auto">
+                        <h2 class="text-success text-center">Recruitment</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid d-flex flex-column justify-content-center mb-3">
+                <h3 class="py-2 text-center">Our Mission</h3>
+                <p class="pb-2 text-center">The goal is to build our students in order to make them relevant in this tech era.</p>
+                <button class="btn btn-dark btn-sm w-50 m-auto ">join us today</button>
+            </div>
+        </div>
+    </section>
+    <section class="container-fluid last-sec vh-50">
         <div class="row">
-            <div class="col-12 d-flex">
-                <div class="col-4">
-                    <h2>24/7 mentorship</h2>
+            <div class="col-12 d-flex .bg-dark mt-2 p-0 justify-content-center justify-md-content-center">
+                <div class="col-3 col-md-4 flex-sm-column-reverse ">
+                    <a class="text-decoration-none" href="services.html"><p class="text-light text-md-center text-center fs-sm-6 ">Services</p></a> 
+                    <a class="text-decoration-none" href="About us.html"><p class="text-light text-md-center text-center fs-sm-6 ">About us</p></a> 
+                    <a class="text-decoration-none" href="contact.html"><p class="text-light text-md-center text-center fs-sm-6 ">Contact us</p></a> 
                 </div>
-                <div class="col-4">
-                    <h2>Games</h2>
+                <div class="col-5 col-md-4">
+                    <a class="text-decoration-none" href=""><p class="text-light text-center fs-sm-6 mt-5 mx-2">bootstrap-task &copy 2021</p></a> 
                 </div>
-                <div class="col-4">
-                    <h2>Recruitment</h2>
-                </div>
-            </div>
-        </div>
-        <h3 class="py-5">Our Mission</h3>
-        <p class="pb-5">The goal is to build our students in order to make them relevant in this tech era.</p>
-        <button class="btn btn-dark btn-lg">join us today</button>
-    </section>
-    <section class="container-fluid last-sec">
-        <div class="row h-25">
-            <div class="col-12 d-flex pt-5 pb-5 .bg-dark">
-                <div class="col-4 d-flex ">
-                    <a class="text-decoration-none" href="services.html"><p class="text-light">Services</p></a> 
-                    <a class="text-decoration-none" href="About us.html"><p class="px-5 text-light">About us</p></a> 
-                    <a class="text-decoration-none" href="contact.html"><p class="text-light">Contact us</p></a> 
-                </div>
-                <div class="col-4">
-                    <a class="text-decoration-none" href=""><p class="text-light mx-4">bootstrap-task &copy 2021</p></a> 
-                </div>
-                <div class="col-4 d-flex justify-content-center">
-                    <a class="text-decoration-none" href=""><p class="text-light">Privacy</p></a>
-                    <a class="text-decoration-none" href=""><p class="text-light px-5">Settings</p></a>  
+                <div class="col-4 col-md-4 justify-sm-content-center flex-sm-column-reverse">
+                    <a class="text-decoration-none" href=""><p class="text-light text-md-center text-center fs-sm-6 ">Privacy</p></a>
+                    <a class="text-decoration-none" href=""><p class="text-light text-md-center text-center fs-sm-6 ">Settings</p></a>  
                 </div>
             </div>
         </div>
-
-    </section>
+    </section>  
 
     <script src="./script/bootstrap.min.js"></script>
 </body>
