--- a/index.html
+++ b/index.html
@@ -9,47 +9,71 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="bg-light">
-    <nav class="container-fluid d-flex navbar bg-light">
-        <a href="index.html"><img class="img-fluid" src="./image/kodecamp-logo 1.png" alt="logo"></a>
-        <ul class="list-unstyled d-flex">
-            <li><a class="text-decoration-none text-dark px-5" href="About us.html">About us</a></li>
-            <li><a class="text-decoration-none text-dark px-5" href="services.html">Services</a></li>
-            <li><a class="text-decoration-none text-dark px-5" href="contact.html">Contact us</a></li>
-        </ul>
-        <button class="btn btn-outline-dark btn-lg bg-light">Sign in</button>
-    </nav>
-    <section>
-        <div class="container-fluid d-flex justify-content-center">
-            <img class="img-fluid w-75 h-50 py-5" src="./image/Group 2kode camp.png" alt="awareness">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light w-auto p-3">
+      <div class="container-fluid">
+        <a  class="navbar-brand" href="index.html"><img class="img-fluid" src="./image/kodecamp-logo 1.png" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link"  href="contact.html">Contact us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="About us.html">About us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Login</a>
+            </li>
+         
+          </ul>
+          <form class="d-flex">
+            <button class="btn btn-outline-success" type="submit">Sign In</button>
+          </form>
         </div>
-        <div class="container pl-3">
-            <p class="text-dark w-75 mb-0 fst-italic lh-lg">From the comfort of where ever you are, you can learn and level up your tech skills.
+      </div>
+    </nav>
+
+
+
+    <section>
+        <div class="container-fluid d-flex justify-content-center vh-75">
+            <img class="img-fluid w-75 h-50 py-2" src="./image/Group 2kode camp.png" alt="awareness">
+        </div>
+        <div class="container pl-3 d-flex justify-content-center flex-column">
+            <p class="text-dark w-100 fst-italic lh-lg text-center m-auto">From the comfort of where ever you are, you can learn and level up your tech skills.
                 It don't matter if you are a novice, this training was organized to accomodate even beginners.
                 is today going to be just a regular day or THE DAY you choose to begin your tech journey? waste no more time dreaming...
             </p>
-            <h4 class="text-primary">choose to live your dream, SMASH that button below.</h4>
-            <button class="btn text-light btn-lg bg-primary my-3 ">Get Started</button>
+            <h4 class="text-primary text-center">choose to live your dream, SMASH that button below.</h4>
+            <button class="btn text-light w-md-50 bg-primary my-3 m-auto ">Get Started</button>
         </div>
     </section>
-    <section class="container-fluid last-sec">
-        <div class="row h-25">
-            <div class="col-12 d-flex pt-5 pb-5 .bg-dark">
-                <div class="col-4 d-flex  flex-sm-column">
-                    <a class="text-decoration-none" href="services.html"><p class="text-light">Services</p></a> 
-                    <a class="text-decoration-none" href="About us.html"><p class="px-5 text-light">About us</p></a> 
-                    <a class="text-decoration-none" href="contact.html"><p class="text-light">Contact us</p></a> 
-                </div>
-                <div class="col-4">
-                    <a class="text-decoration-none" href=""><p class="text-light mx-4 mx-sm-0 ">bootstrap-task &copy 2021</p></a> 
-                </div>
-                <div class="col-4 d-flex justify-center flex-sm-column">
-                    <a class="text-decoration-none" href=""><p class="text-light">Privacy</p></a>
-                    <a class="text-decoration-none" href=""><p class="text-light px-5 px-sm-0">Settings</p></a>  
-                </div>
-            </div>
-        </div>
-
-    </section>
+    <section class="container-fluid last-sec vh-50">
+      <div class="row">
+          <div class="col-12 d-flex .bg-dark mt-2 p-0 justify-content-center justify-md-content-center">
+              <div class="col-3 col-md-4 flex-sm-column-reverse ">
+                  <a class="text-decoration-none" href="services.html"><p class="text-light text-md-center text-center fs-sm-6 ">Services</p></a> 
+                  <a class="text-decoration-none" href="About us.html"><p class="text-light text-md-center text-center fs-sm-6 ">About us</p></a> 
+                  <a class="text-decoration-none" href="contact.html"><p class="text-light text-md-center text-center fs-sm-6 ">Contact us</p></a> 
+              </div>
+              <div class="col-5 col-md-4">
+                  <a class="text-decoration-none" href=""><p class="text-light text-center fs-sm-6 mt-5 mx-2">bootstrap-task &copy 2021</p></a> 
+              </div>
+              <div class="col-4 col-md-4 justify-sm-content-center flex-sm-column-reverse">
+                  <a class="text-decoration-none" href=""><p class="text-light text-md-center text-center fs-sm-6 ">Privacy</p></a>
+                  <a class="text-decoration-none" href=""><p class="text-light text-md-center text-center fs-sm-6 ">Settings</p></a>  
+              </div>
+          </div>
+      </div>
+  </section>  
 
     <script src="./script/bootstrap.min.js"></script>
 </body>
